--- a/css/theme.css
+++ b/css/theme.css
@@ -19,6 +19,10 @@
   section {
     display: block;
   }
+  .section {
+    margin-left:5px;
+    margin-right:5px;
+  }
   p {
     font-family: sans-serif;
   }
@@ -40,6 +44,10 @@
     display: block;
     max-width: 100%;
     height: auto;
+  }
+  .footer {
+    position: relative;
+    margin-top: 8%;
   }
   @media (min-width: 1024px) {
     .panel {
@@ -116,9 +124,9 @@
     color: #fff;
     height: 60px;
     width: 230px;
-    border-radius: 0;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
+    border-radius: 0;
     border-top: 0;
     border-right: 0;
     border-left: 0;
@@ -138,6 +146,8 @@
     -moz-transition: border 0.3s;
     -o-transition: border 0.3s;
     transition: border 0.3s;
+    text-transform:uppercase;
+    width: 290px;
   }
   ::-webkit-input-placeholder {
     color: #7974be;
@@ -223,6 +233,7 @@
     width: 85%;
     z-index: 9;
     -webkit-transition: all 0.25s linear;
+    transition: all 0.25s linear; /*Internet Explorer 10+*/
     border-radius: 5px;
     cursor: pointer;
     display: block;
@@ -323,4 +334,18 @@
       transform: rotate(360deg);
     }
   }
-  
+  .socketError {
+    color: pink;
+    font-weight: bold;
+    position: absolute;
+    margin-top: 5%;
+  }
+  .dyhp {
+    color: #e4e0e8;
+    text-decoration: underline;
+    float: right;
+  }
+  .version {
+    color: white;
+    float: left;
+  }
